--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.3.1",
     "multer": "^1.4.5-lts.1",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0"
+    "express-rate-limit": "^6.10.0",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
